# monte-carlo-vectorized

./: .gitignore  LICENSE  README.md  pyproject.toml
simulation/: monte-carlo-for-loops.ipynb  monte-carlo-vectorised-2-steps.ipynb
