[tool.poetry]
name = "monte-carlo-vectorized"
version = "0.1.0"
description = ""
authors = ["andrew <andrew@infinitelambda.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
python-dotenv= "^1.0.1"
matplotlib= "^3.9.2"
numpy= "^2.1.1"
ipython= "^8.12.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
